Fix: Fix z-index and repo link of Attribution

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -24,6 +24,7 @@
   margin-block-start: 1.8rem;
   margin-block-end: -3.2rem;
 
+  z-index: 0;
   @media (min-width: 600px) {
     font-size: 1.8rem;
   }
